--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" lang="pt-br"/>
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
         <title> First Page </title>
     </head>
     <body>
